syntax = "proto3";

package productvisor.orders.v1;

import "ozon.proto";

option java_multiple_files = true;
option java_package = "ru.dmitartur.common.grpc";
option java_outer_classname = "OrdersProto";

service OrderInternalService {
  rpc UpsertOrders (productvisor.ozon.v1.JsonRequest) returns (productvisor.ozon.v1.JsonResponse);
}


