syntax = "proto3";

package ru.dmitartur.common.grpc;

option java_multiple_files = true;
option java_package = "ru.dmitartur.common.grpc";
option java_outer_classname = "ProductsProto";

// Сервис для работы с продуктами
service ProductService {
  // Найти продукт по артикулу
  rpc FindByArticle(FindByArticleRequest) returns (FindByArticleResponse);
}

// Запрос поиска продукта по артикулу
message FindByArticleRequest {
  string article = 1;
}

// Ответ с информацией о продукте
message FindByArticleResponse {
  bool found = 1;
  ProductInfoDto product = 2;
  string error_message = 3;
}

// DTO продукта
message ProductInfoDto {
  int64 id = 1;
  string name = 2;
  string article = 3;
  string sku = 4;
  int32 stock = 5;
  string barcode = 6;
  string description = 7;
  string price = 8; // BigDecimal как строка
  string created_at = 9; // OffsetDateTime как строка
  string updated_at = 10; // OffsetDateTime как строка
}
